deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devworkspace-client-service
  namespace: devworkspace-controller
spec:
  selector:
    app: devworkspace-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
