deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: devworkspace-client-route
  namespace: devworkspace-controller
  labels:
    app: devworkspace-client
spec:
  host: devworkspace-client-devworkspace-controller.apps-crc.testing
  to:
    kind: Service
    name: devworkspace-client-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
